# pegalpha

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  cmd.sh  curl-format.txt  migration.sql  requests.sql  sample.conf  test.sh  test_refs.md
release/: Rocket.toml  sample.conf
ressources/: style.css
src/: checks.rs  config.rs  defs.rs  main.rs
templates/: base.html.tera  compose_team.html.tera  error.html.tera  help.html.tera  no_team_list.html.tera  no_team_members.html.tera  print_team.html.tera  scan_ui.html.tera  shotgun.html.tera  success.html.tera  team_base.html.tera  team_list.html.tera  view_team.html.tera  welcome.html.tera
