[package]
name = "eag-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
phf = { version = "0.11", features = ["macros"] }
rust-ini = "0.18.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]